--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ import matplotlib.pyplot as plt
 
 # URL del JSON
 #Risky
-#url = 'https://fintual.cl/api/real_assets/186/days'
+#url = 'http://fintual.cl/api/real_assets/186/days'
 #Streep
-url = 'https://fintual.cl/api/real_assets/15077/days'
+url = 'http://fintual.cl/api/real_assets/15077/days'
 
 # Obtener los datos
 response = requests.get(url)
